
    Some support was added to read UUCP passwords from /etc/passwd,
    and to use encrypted passwords.

    uucico now accepts a -C argument to only call a system named by -S
    or -s if there is work for it.

    uucico accepts a -i TLI argument to use TLI I/O calls on standard
    input.

    uucico accepts a -u argument to set the user name.

    uustat accepts a -R argument to rejuvenate each listed job.
    
    Mailer configuration was moved from configure checking to
    policy.h.

    Support was added for QNX, contributed by Joe Wells.

Changes in version 1.04:

IMPORTANT: the default when talking to another version of 1.04 is to
use the new bidirectional 'i' protocol.  If you are using a
half-duplex modem, such as a Telebit T2500, you will want to either
mark the port as half-duplex with the ``half-duplex'' command, or
force use of the 'g' protocol by using the ``protocol'' command in the
sys or port file or by adding ``,g'' after the port name in the
Systems or L.sys or Devices file.

    As usual, many bugs were fixed.

    Bidirectional transfers are supported with the new 'i' protocol;
    it requires an eight-bit clear datapath.

    New programs: uusched, cu, uuto and uupick.

    The 'G' protocol and a new Zmodem protocol were added.

    A number of uustat options were added to support uuclean, and a
    sample uuclean shell script was added to the contrib directory.
    The uustat output formats were changed slightly.

    A protocol extension eliminates transfer of the command file for
    simple commands, such as rmail or rnews, when talking to another
    version of 1.04.

    Some TLI support was added.

    UUCP forwarding was added, along with the ``forward-to'',
    ``forward-from'' and ``forward'' commands.

    If a file transfer fails in the middle, the retry will now start
    from where it left off.  The implementation is compatible with
    SVR4.

    The work queue is checked every 10 minutes during a conversation;