@@ -223,6 +223,10 @@ this will cause
 .I uucico
 to prompt only for the password, not the login name.
 .TP 5
+.B \-z, \-\-try-next
+If a call fails after the remote system is reached, try the next
+alternate rather than simply exiting.
+.TP 5
 .B \-i type, \-\-stdin type
 Set the type of port to use when using standard input.  The only
 support port type is TLI, and this is only available on machines which
